--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -7,19 +7,37 @@
   },
   "type": "module",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "solid-start-node": "^0.2.19",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-logical": "^3.0.0",
     "typescript": "^4.9.4",
     "vite": "^4.1.4"
   },
   "dependencies": {
+    "@felte/solid": "^1.2.7",
+    "@felte/validator-zod": "^1.0.13",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.7.0",
+    "@tanstack/solid-query": "^4.26.1",
+    "@wagmi/core": "^0.10.1",
+    "@zag-js/dialog": "^0.2.13",
+    "@zag-js/menu": "^0.3.12",
+    "@zag-js/popover": "^0.2.13",
+    "@zag-js/rating-group": "^0.2.14",
+    "@zag-js/solid": "^0.2.10",
+    "@zag-js/tabs": "^0.2.13",
+    "@zag-js/toast": "^0.2.14",
+    "class-variance-authority": "^0.4.0",
+    "ethers": "^6.1.0",
+    "graphql-request": "^5.2.0",
+    "ipfs-http-client": "^60.0.0",
     "solid-js": "^1.6.11",
     "solid-start": "^0.2.23",
-    "undici": "^5.15.1"
+    "undici": "^5.15.1",
+    "zod": "^3.21.4"
   },
   "engines": {
     "node": ">=16"
