--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -25,6 +25,7 @@
     "@solidjs/router": "^0.7.0",
     "@tanstack/solid-query": "^4.26.1",
     "@wagmi/core": "^0.10.1",
+    "@zag-js/accordion": "^0.2.13",
     "@zag-js/dialog": "^0.2.13",
     "@zag-js/menu": "^0.3.12",
     "@zag-js/popover": "^0.2.13",
