feat: wip - create transcription on chain

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -16,27 +16,30 @@
     "tailwindcss": "^3.2.4",
     "tailwindcss-logical": "^3.0.0",
     "typescript": "^4.9.4",
-    "vite": "^4.1.4"
+    "vite": "^4.1.4",
+    "vite-plugin-node-polyfills": "^0.7.0"
   },
   "dependencies": {
     "@felte/solid": "^1.2.7",
     "@felte/validator-zod": "^1.0.13",
+    "@fleekhq/fleek-storage-js": "^1.0.24",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.7.0",
     "@tanstack/solid-query": "^4.26.1",
     "@wagmi/core": "^0.10.1",
     "@zag-js/accordion": "^0.2.13",
+    "@zag-js/combobox": "^0.2.16",
     "@zag-js/dialog": "^0.2.13",
     "@zag-js/menu": "^0.3.12",
     "@zag-js/popover": "^0.2.13",
     "@zag-js/rating-group": "^0.2.14",
     "@zag-js/solid": "^0.2.10",
     "@zag-js/tabs": "^0.2.13",
+    "@zag-js/tags-input": "^0.3.14",
     "@zag-js/toast": "^0.2.14",
     "class-variance-authority": "^0.4.0",
     "ethers": "^5.7.2",
     "graphql-request": "^5.2.0",
-    "ipfs-http-client": "^60.0.0",
     "solid-js": "^1.6.11",
     "solid-start": "^0.2.23",
     "undici": "^5.15.1",
