feat: create new transcription

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -10,13 +10,13 @@
   "devDependencies": {
     "@radix-ui/colors": "^0.1.8",
     "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "solid-start-node": "^0.2.19",
-    "tailwindcss": "^3.2.4",
+    "solid-start-node": "^0.2.23",
+    "tailwindcss": "^3.2.7",
     "tailwindcss-logical": "^3.0.0",
     "typescript": "^4.9.4",
-    "vite": "^4.1.4",
+    "vite": "^4.2.0",
     "vite-plugin-node-polyfills": "^0.7.0"
   },
   "dependencies": {
@@ -24,9 +24,9 @@
     "@felte/validator-zod": "^1.0.13",
     "@fleekhq/fleek-storage-js": "^1.0.24",
     "@solidjs/meta": "^0.28.2",
-    "@solidjs/router": "^0.7.0",
+    "@solidjs/router": "^0.8.0",
     "@tanstack/solid-query": "^4.26.1",
-    "@wagmi/core": "^0.10.1",
+    "@wagmi/core": "^0.10.2",
     "@zag-js/accordion": "^0.2.13",
     "@zag-js/combobox": "^0.2.16",
     "@zag-js/dialog": "^0.2.13",
@@ -38,11 +38,13 @@
     "@zag-js/tags-input": "^0.3.14",
     "@zag-js/toast": "^0.2.14",
     "class-variance-authority": "^0.4.0",
+    "date-fns": "^2.29.3",
     "ethers": "^5.7.2",
     "graphql-request": "^5.2.0",
-    "solid-js": "^1.6.11",
+    "solid-js": "^1.6.15",
     "solid-start": "^0.2.23",
     "undici": "^5.15.1",
+    "uuidv4": "^6.2.13",
     "zod": "^3.21.4"
   },
   "engines": {
