feat: wip - create new transcription request

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -45,6 +45,7 @@
     "solid-start": "^0.2.23",
     "undici": "^5.15.1",
     "uuidv4": "^6.2.13",
+    "viem": "^0.1.21",
     "zod": "^3.21.4"
   },
   "engines": {
