--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -23,6 +23,9 @@
     "@felte/solid": "^1.2.7",
     "@felte/validator-zod": "^1.0.13",
     "@fleekhq/fleek-storage-js": "^1.0.24",
+    "@polybase/client": "^0.3.36",
+    "@polybase/eth": "^0.3.36",
+    "@polybase/util": "^0.3.36",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.0",
     "@tanstack/solid-query": "^4.26.1",
