feat: create request

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -47,6 +47,7 @@
     "solid-js": "^1.6.15",
     "solid-start": "^0.2.23",
     "undici": "^5.15.1",
+    "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "viem": "^0.1.21",
     "zod": "^3.21.4"
