--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -26,6 +26,7 @@
     "@polybase/client": "^0.3.36",
     "@polybase/eth": "^0.3.36",
     "@polybase/util": "^0.3.36",
+    "@pushprotocol/restapi": "^0.8.2",
     "@solidjs/meta": "^0.28.2",
     "@solidjs/router": "^0.8.0",
     "@tanstack/solid-query": "^4.26.1",
